--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -36,9 +36,9 @@
 }
 
 /*
-  Template: PenginUI - v0.99.8 - Stand 12.01.2021
-  Copyright - www.gameindustry.eu
-  Webkit Anpassungen: Januar 2021
+	Steamclient - Webkit Anpassungen
+  Template: PenginUI - v0.99.8 - Stand 14.01.2021
+  (c) Copyright - www.gameindustry.eu
 */
 
 /* Global und Startseite */
