--- a/steamui/css/library.css
+++ b/steamui/css/library.css
@@ -1,13 +1,12 @@
 /*
-  Template: PenginUI - v0.99.8 - Stand 12.01.2021
-  Copyright - www.gameindustry.eu
-  Library Anpassungen: Januar 2021
+	Steamclient - Bibliotheks-Anpassungen
+  Template: PenginUI - v0.99.8 - Stand 14.01.2021
+  (c) Copyright - www.gameindustry.eu
 */
 /* Menüs & Hintergründe */
 body, .appdetailssection_AppDetailsSection_2r4TK {
 	font-family: Arial,Helvetica,sans-serif !important;
 }
-div.profile_animated_background { preload: none !important; }
 .libraryhome_UpdatesContainer_17uEB {
 	display:none !important;
 }
@@ -27,6 +26,9 @@ div.profile_animated_background { preload: none !important; }
 	position: absoulute !important;
 }
 .allcollections_ScrollContainer_u1xD3 {
+	background: #24282f !important;
+}
+.collectionview_OuterContainer_2sNr7 {
 	background: #24282f !important;
 }
 .appdetailsgameinfocontainer_Glassy_2QAgO.appdetailsgameinfocontainer_AppGameInfoContainer_25oBZ, .appdetailsoverview_Glassy_2OOzY .appdetailsoverview_ColumnContainer_OhSdL {
@@ -113,7 +115,7 @@ animation-duration: 0s !important;
 .spotlight_MajorEventImageContainer_1PkTB {
 	-webkit-mask-image: unset !important;
 }
-/* Buttons */
+/* Buttons & Eingabe */
 .appdetailscommunityfeed_HeaderStyles_2lNdD {
 	background: none !important;
 }
@@ -127,14 +129,35 @@ animation-duration: 0s !important;
     stroke: #acb2b8 !important;
     fill: #acb2b8 !important;
 }
-/* Kollektionen */
+div.DialogDropDown_CurrentDisplay, button.savecollectiondialog_ActionLabel_25n_z.DialogButton._DialogLayout.Secondary {
+	 background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;
+}
+div.DialogDropDown_CurrentDisplay {
+	padding:5px;
+	 background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;
+}
+input.DialogInput.DialogInputPlaceholder.DialogTextInputBase {
+	text-transform: none !important;
+}
+/* Kollektionen & Titel */
 .allcollections_Collection_3IWn- .allcollections_CollectionImage_2ERAQ .allcollections_CollectionBG_akZKn .allcollections_BackgroundImage_2I7jw {
     width: unset !important;
 }
 .allcollections_Collection_3IWn- .allcollections_CollectionImage_2ERAQ .allcollections_DisplayCaseContainer_3vMgn {
 transform-style:unset !important;
 }
-/* Avatare */
+.gamelistsectionheader_SectionName_2mZ8L {
+	  text-transform: none !important;
+	  color:#66C0F4;
+	  opacity:0.9;
+}
+.gamelistentry_Container_2-O4Z .gamelistentry_GameListEntryContainer_1vO6B .gamelistentry_DownloadProgress_3uk3, .gamelistentry_Container_2-O4Z .gamelistentry_GameListEntryContainer_1vO6B .gamelistentry_DownloadProgress_3uk3F {
+	color: yellow !important;
+}
+.gamelistentry_Container_2-O4Z.gamelistentry_Running_10Gdo, .gamelistentry_Container_2-O4Z.gamelistentry_Updating_1LVQp, .gamelistentry_Container_2-O4Z.gamelistentry_Selected_1UBpA.gamelistentry_Updating_1LVQp, .gamelistentry_Selected_1UBpA .gamelistentry_Container_2-O4Z.gamelistentry_Updating_1LVQp {
+    color: white !important;
+}
+/* Avatare - Achtung, diese werden per Standard als offline deklariert */
 .awayOrSnooze .steamavatar_avatarStatus_3xUpb.bottom {
 	-webkit-mask:unset !important;
 	}
@@ -151,7 +174,7 @@ div.appdetailssectionheader_Label_1SQ30 {
 div.appdetailssection_AppDetailsSectionContainer_31ptF.appdetailssection_AppDetailsSectionHasLabel_2G5B7 div.appdetailssection_Body_5uvIN.appdetailsbroadcastsection_Body_CFp7F {
 	display:none !important;
 	}
-/* Hotfixes bei kleinem Fenster für Award Icons und Grafiken */
+/* Hotfixes für ein milliardenschweres Unternehmen... */
 .awardicon_IconList_2cI0L {
     flex-flow: wrap !important;
 }
@@ -163,7 +186,7 @@ button.DialogButton.appdetailsbutton_AppDetailsButton_3Cdin.appdetailsbutton_Bot
     flex-flow: wrap !important;
     justify-content: space-between;
 }
-/* Ende */
+/* Ende <°///>< */
 .index_Container_2mu1w {
   width: 100%;
   height: 100%;
