--- a/steamui/css/library.css
+++ b/steamui/css/library.css
@@ -85,6 +85,12 @@ animation-duration: 0s !important;
 	margin-top: 2px !important;
 	margin-bottom:3px !important;
 }
+svg.SVGIcon_Button.SVGIcon_Achievement {
+	display: none !important;
+}
+.appdetailsachievementssection_AllAchieved_2YS0E {
+	padding-left:6px !important;
+}
 /* Werbebanner & Teaser */
 .spotlight_MajorEventBackground_388Iu, .spotlight_MajoreEventImageContentContainer_3mREW, .spotlight_MajorEventImageTemplate_lQR9_ {
 	display:none !important;
@@ -133,9 +139,7 @@ animation-duration: 0s !important;
     stroke: #acb2b8 !important;
     fill: #acb2b8 !important;
 }
-div.DialogDropDown_CurrentDisplay, button.savecollectiondialog_ActionLabel_25n_z.DialogButton._DialogLayout.Secondary {
-	 background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;
-}
+div.DialogDropDown_CurrentDisplay, button.savecollectiondialog_ActionLabel_25n_z.DialogButton._DialogLayout.Secondary { background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 div.DialogDropDown_CurrentDisplay {
 	padding:5px;
 	 background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;
