--- a/steamui/css/library.css
+++ b/steamui/css/library.css
@@ -130,7 +130,7 @@ svg.SVGIcon_Button.SVGIcon_Achievement {
 	background: none !important;
 }
 .smartscrollcontainer_ScrollToTopButton_1J21t div, .appactionbutton_Green_3cI5T > .appactionbutton_ButtonChild_2AzIX, .appactionbutton_ButtonChild_2AzIX {
-	 background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;
+	 	 background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; color: rgb(186, 192, 198) !important;
 }
 :not(.appactionbutton_Disabled_1Pb6P) > .appactionbutton_ButtonChild_2AzIX svg, :not(.appactionbutton_Disabled_1Pb6P) > .appactionbutton_ButtonChild_2AzIX svg {
     fill: #acb2b8 !important;
@@ -139,10 +139,10 @@ svg.SVGIcon_Button.SVGIcon_Achievement {
     stroke: #acb2b8 !important;
     fill: #acb2b8 !important;
 }
-div.DialogDropDown_CurrentDisplay, button.savecollectiondialog_ActionLabel_25n_z.DialogButton._DialogLayout.Secondary { background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+div.DialogDropDown_CurrentDisplay, button.savecollectiondialog_ActionLabel_25n_z.DialogButton._DialogLayout.Secondary { 	 background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; color: rgb(186, 192, 198) !important; }
 div.DialogDropDown_CurrentDisplay {
 	padding:5px;
-	 background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;
+	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; color: rgb(186, 192, 198) !important;
 }
 input.DialogInput.DialogInputPlaceholder.DialogTextInputBase {
 	text-transform: none !important;
